2005-11-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot3d.c (eval_3dplots): Fix logic bug in vector style
	initialization.  Replicate vector line style properties stored
	in arrow_properties into plot's main lp_properties.

2005-10-31  Harald Harders  <h.harders@tu-bs.de>

	* term/post.trm (PS_options): Add flags to track whether terminal
	options have been set; issue error on attempt set option twice.

2005-10-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Updated 'help matrix' and 'help matrix ascii'.

2005-10-23  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (adjust_binary_use_spec): Interpret the command
	"plot <foo> matrix" as equivalent to "plot <foo> matrix using 1:3".

2005-10-22  Harald Harders  <h.harders@tu-bs.de>

	* term/pslatex.trm (EPSLATEX_set_color): Fix bug in setting
	pure black or white via a gray value.

2005-10-22  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_open): Fix [very] long-standing bug
	that caused only the first 3 columns of ascii matrix data to
	be read after the command:   splot "data" using 1:2:3 matrix
	Bug #1264105.

2005-10-21  Ethan Merritt  <merritt@u.washington.edu>

	* src/gp_types.h: Force enum for variable types to start at
	INTGR = 1, so that 0 (NULL) is guaranteed not to be a valid
	variable type.

	* src/util.c src/util.h (type_udv): New function returning the
	type of a user-defined variable, or 0 if there is no such udv.
	Replaces isstringvar().

	* datafile.c (plot_ticlabel_using df_readascii): Allow the
	using specs {x|y|z}ticlabel(<foo>) to accept an expression
	for <foo> rather than accepting only an integer constant.

2005-10-20  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/term.c (do_arrow): Moved misplaced declaration.

	* config/config.cyg config/config.mgw: Updated.

2005-10-19  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Update description of xticlabels(<col>).

2005-10-19  Petr Mikulik  <mikulik@physics.muni.cz>
